--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx2G
 org.gradle.daemon=false
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.19.3-pre2
+minecraft_version=1.19.3
 yarn_mappings=1.19.3-pre2+build.6
-loader_version=0.14.10
+loader_version=0.14.11
 # Mod Properties
 mod_version=1.1.1
 maven_group=ca.spottedleaf.starlight
